--- a/requirements.txt
+++ b/requirements.txt
@@ -1,58 +1,38 @@
-attrs==23.2.0
-azure-cognitiveservices-speech==1.34.1
-bcrypt==4.1.2
-beautifulsoup4==4.12.3
-blinker==1.7.0
-bs4==0.0.2
-certifi==2024.2.2
-cffi==1.16.0
-charset-normalizer==3.3.2
-click==8.1.7
-colorama==0.4.6
-contourpy==1.2.0
-cycler==0.12.1
-et-xmlfile==1.1.0
-Flask==3.0.1
-Flask-Bcrypt==1.0.1
-Flask-JWT-Extended==4.6.0
-Flask-Login==0.6.3
-Flask-SQLAlchemy==3.1.1
-fonttools==4.49.0
-greenlet==3.0.3
-h11==0.14.0
-idna==3.6
-itsdangerous==2.1.2
-Jinja2==3.1.3
-kiwisolver==1.4.5
-MarkupSafe==2.1.4
-matplotlib==3.8.3
-numpy==1.26.4
-openpyxl==3.1.2
-outcome==1.3.0.post0
-packaging==23.2
-pandas==2.2.1
-pillow==10.2.0
-plotly==5.19.0
-pycparser==2.21
-PyJWT==2.8.0
-pyparsing==3.1.1
-PySocks==1.7.1
-python-dateutil==2.8.2
-python-dotenv==1.0.1
-pytz==2024.1
-pywin32==306
-requests==2.31.0
-selenium==4.18.1
-six==1.16.0
-sniffio==1.3.1
-sortedcontainers==2.4.0
-soupsieve==2.5
-SQLAlchemy==2.0.26
-tenacity==8.2.3
-trio==0.24.0
-trio-websocket==0.11.1
-typing_extensions==4.9.0
-tzdata==2024.1
-urllib3==2.2.0
-Werkzeug==3.0.1
-wsproto==1.2.0
+attrs
+beautifulsoup4
+bs4
+certifi
+charset-normalizer
+contourpy
+cycler
+et_xmlfile
+fonttools
+grapher
+h11
+idna
+kiwisolver
+matplotlib
+numpy
+openpyxl
+outcome
+packaging
+pandas
+pillow
+pyparsing
+PySocks
+python-dateutil
+pytz
+requests
+selenium
+six
+sniffio
+sortedcontainers
+soupsieve
+trio
+trio-websocket
+typing_extensions
+tzdata
+urllib3
+websocket-client
+wsproto
+XlsxWriter
